# android-dubbing-models

./: .si.json  generate_icons.sh  project_snapshot.txt  settings.gradle.kts
.github/workflows/: build-apk.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yourapp/dubbing/: MainActivity.kt
app/src/main/java/com/yourapp/dubbing/ui/: PlayerScreen.kt  ProcessingScreen.kt  VideoPickerScreen.kt
app/src/main/java/com/yourapp/dubbing/ui/theme/: Theme.kt
app/src/main/java/com/yourapp/dubbing/viewmodel/: DubbingViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
dubbing-engine/: build.gradle.kts
dubbing-engine/src/main/: AndroidManifest.xml
dubbing-engine/src/main/cpp/: CMakeLists.txt  pitch_detector.cpp  sonic_jni.cpp
dubbing-engine/src/main/cpp/sonic/: sonic.c  sonic.h
dubbing-engine/src/main/java/com/yourapp/dubbing/engine/: AudioExtractor.kt  DubbingPipeline.kt  EmotionModulator.kt  GenderDetector.kt  SpeechRecognizer.kt  TextToSpeechEngine.kt  Translator.kt  VideoDubber.kt
dubbing-engine/src/main/java/com/yourapp/dubbing/engine/utils/: ModelManager.kt
